<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="584dp"
        android:layout_height="640dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/elipse2" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Simon"
        android:textColor="@color/titulo"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/btn_info_memory"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/boton_rectangular_lila"
        android:gravity="center"
        android:padding="5dp"
        android:text="Continuar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/inst1"
        android:layout_width="256dp"
        android:layout_height="130dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="132dp"
        android:gravity="left"
        android:text="@string/simon1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inst2"
        android:layout_width="314dp"
        android:layout_height="159dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="304dp"
        android:gravity="right"
        android:text="@string/simon2"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inst3"
        android:layout_width="282dp"
        android:layout_height="122dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="424dp"
        android:gravity="right"
        android:text="@string/simon3"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inst4"
        android:layout_width="185dp"
        android:layout_height="106dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="536dp"
        android:gravity="left"
        android:text="@string/simon4"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView41"
        android:layout_width="175dp"
        android:layout_height="202dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/instrucciones_simon" />

    <ImageView
        android:id="@+id/imageView42"
        android:layout_width="349dp"
        android:layout_height="40dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="144dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/instrucciones_simon2" />

    <ImageView
        android:id="@+id/imageView43"
        android:layout_width="168dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="344dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/instrucciones_simon4" />

    <ImageView
        android:id="@+id/imageView44"
        android:layout_width="163dp"
        android:layout_height="121dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cerebro_interrogante" />


</androidx.constraintlayout.widget.ConstraintLayout>